--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,12 @@ services:
   - type: web
     name: llm-calculator
     env: python
+    runtime: python3
+    plan: free
     buildCommand: pip install -r requirements.txt
     startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
+    autoDeploy: true
+    healthCheckPath: /
     envVars:
       - key: OPENAI_API_KEY
         sync: false 
